﻿drkns 01.07.2014 00:43:59 +0200 - build 3971

1. VS14 по умолчанию считает, что %s - это char*, что, в принципе, правильно, но всё ломает.
   Хороший повод окончательно вычистить *printf, а пока определим _CRT_STDIO_LEGACY_WIDE_SPECIFIERS.

drkns 30.06.2014 19:07:38 +0200 - build 3970

1. Рефакторинг.

drkns 29.06.2014 19:09:47 +0200 - build 3969

1. Рефакторинг.

2. Уделён неипользуемый код в tvar.?pp.

zg 29.06.2014 16:27:02 +0200 - build 3968

1. 0002723: ECTL_GETINFO не работает при вызове редактора из редактора

drkns 28.06.2014 02:43:22 +0200 - build 3967

1. Рефакторинг.

drkns 27.06.2014 19:53:08 +0200 - build 3966

1. Восстановим поломанный GCC билд.

2. GCC warning.

3. Рефакторинг.

svs 26.06.2014 14:23:24 +0400 - build 3965

1. Mantis#0002692: Невозможно прервать операцию, если она запущена из макроса
   Откат build 3963 до лучших времен. Жуки вылезли.

w17 26.06.2014 00:16:21 +0400 - build 3964

1. Ещё уточнение 3956.
   Через Plugin API пока не работает.

2. M#2540: Viewer Search always starts from the beginning of the file
   НЕЗАВЕРШЕНО!

svs 25.06.2014 11:17:19 +0400 - build 3963

1. Mantis#0002692: Невозможно прервать операцию, если она запущена из макроса
   Закомметим и посмотрим.

w17 25.06.2014 00:16:56 +0400 - build 3962

1. Уточнение 3960.

drkns 24.06.2014 19:41:46 +0200 - build 3961

1. Уточнение 3958.

w17 24.06.2014 20:02:53 +0400 - build 3960

1. M#2706: При конвертировании в UTF-7 не обрабатываются ошибки

w17 23.06.2014 14:41:05 +0400 - build 3959

1. Уточнение 3956.

drkns 21.06.2014 15:51:25 +0200 - build 3958

1. При запуске по Far.exe /p%FARPROFILE%\Plugins не загружались плагины.

drkns 20.06.2014 20:12:27 +0200 - build 3957

1. Если плагин содержит на своей панели объекты с атрибутом FILE_ATTRIBUTE_REPARSE_POINT - считаем, что это симлинки.

w17 20.06.2014 13:46:02 +0400 - build 3956

1. Experimental. M#2684: Возможность смены кодировки путём перечитывания файла

drkns 19.06.2014 09:33:50 +0200 - build 3955
